compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_float_size.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let x = <<1:8-float>> x"
---
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let x = <<1:8-float>> x
  │             ^ Invalid float size

Hint: floats have an exact size of 16/32/64 bits.
See: https://gleam.run/book/tour/bit-strings.html

