compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_array_segment_conflicting_signedness2.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "case <<1>> { <<1:unsigned-signed>> -> 1 }"
---
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:27
  │
1 │ case <<1>> { <<1:unsigned-signed>> -> 1 }
  │                           ^^^^^^ This is an extra signedness specifier

Hint: This segment already has a signedness of unsigned.
See: https://gleam.run/book/tour/bit-arrays.html

